<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color"
    tools:context="com.yp.trackingapp.ui.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_name"
        android:id="@+id/brandName"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:textColor="#212121"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/fullNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/ligh_gray_color"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/usernameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/ligh_gray_color"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/phonenumberSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:textColorHint="@color/ligh_gray_color"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/addressSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address_hint"
        android:ems="10"
        android:textColorHint="@color/ligh_gray_color"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/weightSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/weight_hint"
        android:ems="10"
        android:textColorHint="@color/ligh_gray_color"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:ems="10"
        android:textColorHint="@color/ligh_gray_color"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:layout_below="@+id/passwordSignIn"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white_color"
        android:background="@color/colorPrimary"
        />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white_color"
        android:background="@color/colorPrimary"/>

</LinearLayout>
