<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    tools:context="com.yp.trackingapp.ui.LogInActivity">

    <TextView
        android:id="@+id/brandName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/logo_name"
        android:textColor="#212121"
        android:textSize="40sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/usernameSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:editable="true"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/ligh_gray_color">

        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/ligh_gray_color"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordSignIn"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_button_label"
        android:textColor="@color/white_color"
        />

    <Button
        android:id="@+id/goToSignUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up_text"
        android:textColor="@color/white_color"/>

</LinearLayout>
