<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    tools:context="com.yp.trackingapp.ui.WalkActivity">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp">
    </fragment>

    <RelativeLayout
        android:id="@+id/time_dis_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/container_margin"
        android:background="@color/white_color">

        <TextView
            android:id="@+id/text_view_distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="@dimen/label_padding"
            android:text="@string/distance_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_bold_color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_view_distance_label"
            android:padding="@dimen/label_padding"
            android:text="0.0 mi"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/text_view_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_view_distance_label"
            android:padding="@dimen/label_padding"
            android:text="@string/time_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_bold_color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_distance_label"
            android:layout_toEndOf="@+id/text_view_distance_label"
            android:padding="@dimen/label_padding"
            android:text="0:0:0"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textViewStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_view_time_label"
            android:padding="@dimen/label_padding"
            android:text="@string/step_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_bold_color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewStepCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_time_label"
            android:layout_toEndOf="@+id/textViewStep"
            android:padding="@dimen/label_padding"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/start_stop_walk_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewStep"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:padding="@dimen/walk_btn_padding"
            android:text="@string/start_walk"
            android:textColor="@color/white_color"/>

    </RelativeLayout>


</LinearLayout>


